# peace_eternal

./: .gitignore  Cargo.toml  todo.md
.cargo/: config.toml
assets/: gun.glb
assets/models/: basic_bullet.glb  grenade_launcher_1.glb  gun.glb  mag_curved_1.glb  mag_curved_2.glb  mag_straight_1.glb  mag_straight_2.glb  muzzleflare.glb  pistol.blend  pistol_1.glb  pistol_2.glb  rifle_1.glb  rifle_2.glb  shell_pistol.glb  shell_rifle.glb  shell_shotgun.glb  shotgun_pump.glb
design/: classes.md  damage.md  enemies.md  fluff.md  graphics.md  roguelike.md  sources.md  weapons.md
src/: app_setup_options.rs  main.rs  sketchpad.rs
src/asset_setup/: audio.rs  mod.rs  models.rs  particles.rs  primitives.rs
src/character_animating_systems/: mod.rs
src/character_control_systems/: camera_controls.rs  keyboard_receive.rs  mod.rs  mouse_grabbing.rs  platformer_control_systems.rs
src/content/: guns.rs  mod.rs  projectiles.rs
src/dev/: editor.rs  mod.rs
src/dev/ui/: mod.rs
src/fx/: flags.rs  flash.rs  mod.rs  muzzle_flare.rs  smokepuff.rs  sparks.rs
src/gameplay/: mod.rs
src/gameplay/character_control_systems/: camera_controls.rs  keyboard_receive.rs  mod.rs  platformer_control_systems.rs
src/gameplay/content/: guns.rs  mod.rs  projectiles.rs
src/gameplay/controls/: info_dumping_systems.rs  inventory_controls.rs  keyboard_receive.rs  mod.rs  platformer_control_systems.rs
src/gameplay/guardrails/: mod.rs
src/gameplay/gunplay/: arms.rs  dummy_gun.rs  guns.rs  mod.rs  projectiles.rs  servo.rs  servo_components.rs
src/gameplay/inventory/: components.rs  mod.rs  swapping.rs
src/gameplay/level_mechanics/: mod.rs
src/gameplay/levels_setup/: camera.rs  level_switching.rs  mod.rs  player.rs
src/graphics/: mod.rs
src/graphics/character_animating_systems/: mod.rs
src/graphics/fx/: audio.rs  flags.rs  flash.rs  mod.rs  muzzle_flare.rs  smokepuff.rs  sparks.rs
src/guardrails/: mod.rs
src/gunplay/: arms.rs  guns.rs  mod.rs  projectiles.rs  servo.rs
src/level_mechanics/: mod.rs  moving_platform.rs
src/levels_setup/: camera.rs  helper.rs  level_switching.rs  mod.rs  player.rs
src/options/: controls.rs  mod.rs
src/ui/: component_alterbation.rs  hud.rs  mod.rs  tuning.rs
src/util/: animating.rs  audio.rs  camera_shake.rs  compose.rs  deathmarker.rs  mod.rs  primitives.rs  smoothing.rs
