[package]
name = "peace_eternal"
authors = ["Zellenon"]
version = "0.1.0"
edition = "2021"
exclude = ["assets/"]
repository = "https://github.com/zellenon/peace_eternal"
keywords = ["gamedev", "bevy", "game"]
categories = ["game-development"]
homepage = "https://zellenon.github.io/peace_eternal/"

[features]
default = ["dev"]
dev = [
    "dep:bevy_editor_pls",
    "bevy/file_watcher",
    "bevy/dynamic_linking",
    # "oxidized_navigation/debug_draw",
]
tracing = ["bevy/trace_chrome"]
framepace = ["dep:bevy_framepace"]
egui = []

[dependencies.bevy]
version = "0.14"
features = [
    "jpeg",
]

[dependencies]
# winit = { version = "0.30", default-features = false }
# image = { version = "0.25", default-features = false }
## This greatly improves WGPU's performance due to its heavy use of trace! calls
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }

# generic dependencies
serde = { version = "1", features = ["derive"] }
anyhow = "1"

# Bevy plugins
bevy_kira_audio = "0.20"
bevy_asset_loader = { version = "0.21", features = ["progress_tracking", "standard_dynamic_assets"] }
bevy_common_assets = { version = "0.11", features = ["ron", "toml"] }
bevy_egui = { version = "0.28",  features=["immutable_ctx"]}
egui_plot = "0.28"
egui_extras = { version = "0.28" }
bevy_framepace = { version = "0.17", optional = true }
# oxidized_navigation = { version = "0.11", default-features=false, features = ["xpbd", "parry3d_015"] }
iyes_progress = "0.12"
leafwing-input-manager = { version = "0.15", features = ["egui"] }
# bevy_dolly = "0.0.4"
bevy_editor_pls = { version = "0.9.0", optional = true }
bevy_hanabi = { version = "0.12", default-features = false, features = ["3d"] }
# bevy-tnua-xpbd3d = "0.5"
# bevy_xpbd_3d = { version = "0.5", features = ["simd"] }
bevy-tnua = { version = "0.19"}
avian3d = {version = "^0.1", default-features = false, features = ["3d","debug-plugin", "parallel", "f32", "parry-f32"]}
bevy-tnua-avian3d = { version = "0.1", default-features = false }
bevy-tnua-physics-integration-layer = "0.4"
bevy_atmosphere = "0.10"
bevy_gltf_blueprints = "0.11"
bevy_registry_export = "0.4"
clap = { version = "4.5", features = ["derive"]}





[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "^0.3", features = ["Window", "Location", "Url", "UrlSearchParams"] }

[build-dependencies]
embed-resource = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# High optimizations for distributing the game
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true


